<resources>
    <string name="app_name">Travisit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="f_auth_welcome_back">Welcome Back</string>
    <string name="f_auth_sign_in">Sign In!</string>
    <string name="hint_email">EMAIL ADDRESS</string>
    <string name="hint_password">PASSWORD</string>
    <string name="hint_sign_in_as">SIGN IN AS</string>
    <string name="forgot_password_q">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="go_to_sign_up">Don\'t have an account? <![CDATA[<font color=#46B8F0>Sign up</font>]]></string>
    <string name="f_registration_hello">Hello,</string>
    <string name="f_registration_sign_up">Sign Up!</string>
    <string name="hint_full_name">FULL NAME</string>
    <string name="switch_agree_to_terms">I agree to the policy &amp; terms</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_to_sign_in">Already have an account? <![CDATA[<font color=#46B8F0>Sign in</font>]]></string>
    <string name="forgot_password_q_divided">Forgot \nPassword?</string>
    <string name="reset_password">Reset Password</string>
    <string name="complete_profile_header">Complete Profile</string>
    <string name="hint_phone">PHONE NUMBER</string>
    <string name="hint_languages">LANGUAGES</string>
    <string name="hint_years_of_experience">YEARS OF EXPERIENCE</string>
    <string name="areas">Areas you\'re available in</string>
    <string name="submit_for_verification_button">Submit for verification</string>
    <string name="hint_nationality">NATIONALITY</string>
    <string name="interests">Interests</string>
    <string name="hint_search_interests">Search Interests</string>
    <string name="save">save</string>
    <string name="unverified_account_status">Account Status: Waiting for Verification</string>
    <string name="unverified_account_status_description">Your account is waiting for verification. When your account is verified, a confirmation mail will be sent to you on your registered email. If you think we\'re late or you have a problem contact us on business-help@travisit.com. Thank you.</string>
    <string name="log_out">Log out</string>
    <string name="congratulations">Congratulations!</string>
    <string name="verified_account_status_description">Your account is verified.</string>
    <string name="go_to_account">Go to home page</string>
    <string name="hint_education">EDUCATION</string>
    <string name="qualifications">Qualifications</string>
    <string name="preferences">Preferences</string>
    <string name="hint_rate">RATE PER HOUR</string>
    <string name="hint_license_number">License Number</string>
    <string name="hint_membership_number">Membership Number</string>
    <string name="hint_dob">DATE OF BIRTH</string>
    <string name="hint_search_offers">Search Offers</string>
    <string name="hint_search_tours">Search Tours</string>
    <string name="explore_title"><![CDATA[Tours & Offers]]></string>
    <string name="tours">Tours</string>
    <string name="offers">Offers</string>
    <string name="people_have_booked_this">people have booked this</string>
    <string name="by">By</string>
    <string name="ends_on">Ends on</string>
    <string name="profile">Profile</string>
    <string name="business_dashboard">Business Dashboard</string>
    <string name="account_settings">Account Settings</string>
    <string name="about_us">About us</string>
    <string name="about_travisit_business">About Travisit Business</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Tell others about Travisit Business</string>
    <string name="rate_app">Rate us on Play Store</string>
    <string name="explore_details_header">Explore Item Name</string>
    <string name="explore_details_date">06-01-2020  to  08-01-2020</string>
    <string name="description">Description</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="tags">Tags</string>
    <string name="random_number">43</string>
    <string name="random_rating">4.3</string>
    <string name="missing_item">Couldn\'t find the Item</string>
    <string name="edit_option">Edit</string>
    <string name="delete_options">Delete</string>
    <string name="delete_alert">DELETE ALERT</string>
    <string name="confirm_delete_message">Are you sure you want to delete the selected tour?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset_code_sent">Check your email for the code</string>
    <string name="go_to_code_page">Already have a code?</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="reset_password_code">Reset Password Code</string>
    <string name="hint_code"><![CDATA[>Enter the code your received here]]></string>
    <string name="code_confirmed">Code Confirmed</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="password_changed_successfully">Password Changed Successfully.</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="change_pp">Change Profile Picture</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="save_option">Save</string>
    <string name="cancel_option">Cancel</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_start_date">Start Date</string>
    <string name="hint_end_date">End Date</string>
    <string name="branch">Branch</string>
    <string name="tour_edit_header">Edit Tour</string>
    <string name="tour_add_header">Add New Tour</string>
    <string name="tour_pictures">Pictures</string>
    <string name="add_now">Add now</string>
    <string name="update_now">Save</string>
    <string name="home">Home</string>
    <string name="businesses">Businesses</string>
    <string name="tour_Guides">Tour Guides</string>
    <string name="privateTour">Private</string>
    <string name="publicTour">Public</string>
    <string name="paymentLink">https://accept.paymobsolutions.com/api/acceptance/iframes/91457?payment_token=ZXlKaGJHY2lPaUpJVXpVeE1pSXNJblI1Y0NJNklrcFhWQ0o5LmV5SnNiMk5yWDI5eVpHVnlYM2RvWlc1ZmNHRnBaQ0k2Wm1Gc2MyVXNJbUpwYkd4cGJtZGZaR0YwWVNJNmV5Sm1hWEp6ZEY5dVlXMWxJam9pV1c5dGJtRWlMQ0pzWVhOMFgyNWhiV1VpT2lKTllXNXpiM1Z5SWl3aWMzUnlaV1YwSWpvaVJYUm9ZVzRnVEdGdVpDSXNJbUoxYVd4a2FXNW5Jam9pT0RBeU9DSXNJbVpzYjI5eUlqb2lORElpTENKaGNHRnlkRzFsYm5RaU9pSTRNRE1pTENKamFYUjVJam9pU21GemEyOXNjMnRwWW5WeVoyZ2lMQ0p6ZEdGMFpTSTZJbFYwWVdnaUxDSmpiM1Z1ZEhKNUlqb2lRMUlpTENKbGJXRnBiQ0k2SW5sdmJXNWhRR0pwZERZNExtTnZiU0lzSW5Cb2IyNWxYMjUxYldKbGNpSTZJakF4TVRJek9URTBORFF4SWl3aWNHOXpkR0ZzWDJOdlpHVWlPaUl4TWpNeElpd2laWGgwY21GZlpHVnpZM0pwY0hScGIyNGlPaUpPUVNKOUxDSnZjbVJsY2w5cFpDSTZOamcyTXpVeE5Td2lZM1Z5Y21WdVkza2lPaUpGUjFBaUxDSmhiVzkxYm5SZlkyVnVkSE1pT2pNd01EQXdMQ0p3Yld0ZmFYQWlPaUkwTVM0eE9Ua3VNakl5TGpZeUlpd2lZMkZ5WkY5cGJuUmxaM0poZEdsdmJsOXBaQ0k2TmprM01qQXNJblZ6WlhKZmFXUWlPalF6T1RZeWZRLlJSeXpYLWtQbFR6RzFvNTRwTWhZMk9pcG0wWlN6THQzWXhvOU1WTUplM3ZzVWxJSnpSdGViWE41MU5vc25zU29yLVFKWFBZR1FnQVVMOVJVWjFSdWxn</string>
</resources>
